have all specs.js working

--- a/index.html
+++ b/index.html
@@ -23,18 +23,19 @@
           <h4><strong>Created by:</strong></h4>
           <h5>Chris Berry</h5>
           <h4><strong>GitHub Username/URL</strong></h4>
-          <p><a href="chrisberry321"></a>chrisberry321</p>
+          <a href="https://github.com/chrisberry321">chrisberry321</a>
           <h4><strong></strong>Level 2 Test for:</strong></h4>
           <h5>Java</h5>
         </div>
       </div>
 
 <!-- body     -->
+
       <div class="col-xs-6 col-sm-9">
         <form id="count">
           <div class="form-group">
-            <h3>Let's play!</h3>
-            <h4>Rules:</h4>
+            <h3><strong>Let's play!</strong></h3>
+            <h3>Rules:</h3>
             <p>Ping Pong will count up to your number from 1 with the following exceptions:</p>
               <ol>
                 <li>Numbers divisible by 3 become "ping"</li>
@@ -46,6 +47,9 @@
             <button type="submit" class="btn">Ping Pong!</button>
           </div>
         </form>
+
+<!-- results -->
+
         <div id="result">
           <p>
             <ul class="listofresults">
@@ -56,15 +60,6 @@
 
       </div>
     </div>
-<!-- results -->
-
-      <!-- <div id="result">
-        <p>
-          <ul class="listofresults">
-          </ul>
-        <span class="invalid"></span>
-        </p>
-      </div> -->
 
   </body>
 </html>
