have code that is more DRY

--- a/index.html
+++ b/index.html
@@ -51,11 +51,7 @@
 <!-- results -->
 
         <div id="result">
-          <p>
-            <ul class="listofresults">
-            </ul>
-          <span class="invalid"></span>
-          </p>
+          <p><ul class="listofresults"></ul><span class="invalid"></span></p>
         </div>
 
       </div>
