add an image file and an image to the results

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <a href="https://github.com/chrisberry321">chrisberry321</a>
           <h4><strong></strong>Level 2 Test for:</strong></h4>
           <h5>Java</h5>
+          <!-- <a href="https://chrisberry321.github.io/colorloop/">looping color dots</a> -->
         </div>
       </div>
 
@@ -51,6 +52,7 @@
 <!-- results -->
 
         <div id="result">
+          <img src="images/pingpong.jpg" class="img-responsive" alt="man playing pingpong"/>
           <p><ul class="listofresults"></ul><span class="invalid"></span></p>
         </div>
 
