--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a href="https://github.com/chrisberry321">chrisberry321</a>
           <h4><strong></strong>Level 2 Test for:</strong></h4>
           <h5>Java</h5>
-          <!-- <a href="https://chrisberry321.github.io/colorloop/">looping color dots</a> -->
+          <a href="https://chrisberry321.github.io/colorloop/">looping color dots</a>
         </div>
       </div>
 
